fix: overflow & colors

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,6 +49,7 @@ a:visited {
 	flex-grow: 2;
 	min-height: 60vh;
 	z-index: 0;
+	overflow: hidden;
 }
 
 /* ALGUNOS ESTILOS GENERALES */
