--- a/src/components/top/Navbar.module.css
+++ b/src/components/top/Navbar.module.css
@@ -31,7 +31,6 @@
 	position: relative;
 	/* necesito esto para el subrayado*/
 	display: flex;
-	/* min-width: 50px; */
 	flex-direction: column;
 	text-align: center;
 	margin: 0 10px 0 10px;
@@ -39,6 +38,7 @@
 }
 
 .categoryitem a {
+	color: var(--cLetra);
 	text-decoration: none;
 	position: relative;
 	transition: 0.5s ease-in-out;
