--- a/src/pages/Equipo.module.css
+++ b/src/pages/Equipo.module.css
@@ -77,6 +77,7 @@
 @media screen and (width <= 700px) {
 	.pIntroText {
 		width: auto;
+		margin: 0;
 	}
 
 	.p_card > .desc {
